static/window/styles/core.css
/* ... */
/* GameGrid Item Title */
.game-grid-item__title {
  padding: calc(var(--width) * 0.001rem);
  height: calc((var(--height) - var(--width)) * 0.001rem);
  text-align: center;
}
.game-grid-item__title__text {
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: calc((16 / 188) * var(--height) * 1px);
  line-height: 1.2;
  word-break: break-word;
  /* Pimp */
  font-weight: bold;
  user-select: none;
}
/* GameGrid NoGames */
.game-grid__no-games {
  width: 100%;
  height: 100%;
  padding: 1em;
  text-align: center;
}
.game-grid__no-games__title {
  font-size: 2em;
}
/* GameGrid ReactVirtualized-Grid */
.game-grid .ReactVirtualized__Grid__innerScrollContainer {
  margin: 0 auto;
}


/* ------ Playlist ------ */
.playlist-list__message {
  padding: 1rem;
  text-align: center;
}
.playlist-list__message h2 {
  margin-bottom: 0.2rem;
}

/* PlaylistList */
.playlist-list {
  --image-size: 1.45rem; /* Width & Height of the icon in the playlist item head */
  --image-padding: 0.15rem; /* Padding of the playlist item head */
}
/* Playlist-List-Item */
.playlist-list-item--editing p {
  user-select: none; /* Can not select text while editing is enabled */
}
.playlist-list-item--drag-over {
  position: relative;
}
.playlist-list-item--drag-over .playlist-list-item__drag-overlay {
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  border: 2px dashed;
}
/* Playlist-List-Item Head */
.playlist-list-item__head {
  display: flex;
  height: calc(var(--image-size) + var(--image-padding) * 2);
  padding: var(--image-padding);
  padding-left: 0.3rem;
  cursor: pointer;
  overflow: hidden;
}
.playlist-list-item--editing .playlist-list-item__head {
  cursor: default;
}
.playlist-list-item__head > * {
  user-select: none;
}
.playlist-list-item__icon {
  flex: 0 0 auto;
  width: var(--image-size);
  height: var(--image-size);
}
.playlist-list-item__icon-image {
  width: 100%;
  height: 100%;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}
.playlist-list-item__icon-placeholder {
  height: 65%;
}
.playlist-list-item__icon-placeholder-inner {
  width: 100%;
  height: 100%;
}
.playlist-list-item__title {
  flex: 0 1 auto;
  min-width: 0;
  font-weight: bold;
  padding-left: 0.5rem;
}
.playlist-list-item__divider {
  flex: 0 0 auto;
  padding: 0 0.2rem;
  font-size: 0.9em;
}
.playlist-list-item__author {
  flex: 0 1 auto;
  min-width: 0;
  font-size: 0.9em;
  font-style: italic;
}
.playlist-list-item__author > p {
  padding-right: 0.2em; /* Give it some extra space since its in italics */
}
.playlist-list-item__text-field {
  /* Truncates the overflowing text */
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.playlist-list-item--editing .playlist-list-item__title,
.playlist-list-item--editing .playlist-list-item__author {
  flex: 1 1 auto;
}
.playlist-list-item--editing .playlist-list-item__title,
.playlist-list-item--editing .playlist-list-item__author,
.playlist-list-item--editing .playlist-list-item__icon {
  cursor: pointer;
}
/* Playlist-List-Item Content */
.playlist-list-content {
  overflow: hidden;
}
.playlist-list-content__inner {
  padding: 0.4rem;
}
.playlist-list-content__edit {
  display: flex;
  width: 100%;
  margin-bottom: 0.15rem;
}
.playlist-list-content__id {
  display: flex;
  flex: 1 1 auto;
  overflow: hidden;
  font-size: 0.7rem;
  opacity: 0.3;
  white-space: pre;
}
.playlist-list-content__id-pre {
  flex: 0 0 auto;
  user-select: none;
}
.playlist-list-content__id-text {
  flex: 1 1 auto;
  overflow: hidden;
}
.playlist-list-content__id-text p {
  user-select: text;
  overflow: hidden;
  text-overflow: ellipsis;
}
.playlist-list-content__buttons {
  flex: 0 0 auto;
  display: flex;
  font-size: 0.85rem;
}
.playlist-list-content__button {
  margin-left: 0.3rem;
}
.playlist-list-content__description {
  width: 100%;
  min-height: 5rem;
  resize: vertical;
  white-space: pre-wrap;
  user-select: none;
}
.playlist-list-content__extreme {
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}
.playlist-list-content__extreme input[type="checkbox"] {
  margin-right: 0.3rem;
}
/* Playlist-List-Fake-Item */
.playlist-list-fake-item {
  display: flex;
  overflow: hidden;
  height: calc(var(--image-size) + var(--image-padding) * 2);
  padding: var(--image-padding);
  padding-left: 0.5rem;
  flex-grow: 1;
}
.playlist-list-fake-item-buttons {
  display: flex;
  overflow: hidden;
  height: calc(var(--image-size) + var(--image-padding) * 2);
}
.playlist-list-fake-item,
.playlist-list-fake-item * {
  cursor: pointer;
  user-select: none;
}
.playlist-list-fake-item__inner {
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.playlist-list-fake-item__inner > * {
  display: inline-block;
}
.playlist-list-fake-item__inner .icon {
  --icon-size: calc(var(--image-size) * 0.65);
  width: var(--icon-size);
  height: var(--icon-size);
}
.playlist-list-fake-item__inner__title {
  font-size: 1.1rem;
  padding-left: 0.5rem;
  overflow: hidden;
  word-break: break-all;
}


/** ------ Developer ------ */
.developer-page {
  width: 100%;
  height: 100%;
  overflow: auto;
}
.developer-page__inner {
  padding: 0.1rem 0.5rem;
  min-width: 30em;
  text-align: center;
  overflow: visible;
}
.developer-page__title {
  font-size: 2.5em;
  user-select: none;
}
.developer-page__description {
  user-select: none;
}
.developer-page__buttons > * {
  margin: 0.2rem;
}
.developer-page__log {
  flex: 1 1 auto;
  height: 35rem;
  border: 1px solid;
  border-radius: 0.5rem;
  text-align: left;
}
.developer-page__services-title {
  flex: 0 1 auto;
  font-size: 2em;
  font-weight: bold;
  user-select: none;
}
/* Service Box */
.service-box {
  margin: 0.5rem 1.8rem 1rem;
  padding: 0.5rem;
  text-align: initial;
}
.service-box__head-top {
  display: flex;
  font-size: 1.15rem;
  font-weight: bold;
}
/* ... */

